# capacities-companion

./: .gitignore  README.md  pyproject.toml
notebooks/: 00. Parsing Capacities Export Data.ipynb  01. Using Local LLMs for Object Suggestions.ipynb  02. Visualizing Object Network.ipynb
utils/: data.py  networks.py
