[project]
name = "capacities-companion"
version = "0.1.0"
description = "A suite of companion tools for Capacities (the PKM app)"
authors = [
    {name = "Trevor Hubbard",email = "trevormhubbard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama (>=0.5.1,<0.6.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pickleshare = "^0.7.5"
nbformat = "^5.10.4"

